SERVER-15580 KeepMutationsStage shouldn't deref invalidated iterator