src/mongo/db/exec/keep_mutations.cpp
@@ -79,12 +79,18 @@ namespace mongo {
 
             // Child is EOF.  We want to stream flagged results if there are any.
             _doneReadingChild = true;
-            _flaggedIterator = _workingSet->getFlagged().begin();
+
+            // Read out all of the flagged results from the working set.  We can't iterate through
+            // the working set's flagged result set directly, since it may be modified later if
+            // further documents are invalidated during a yield.
+            std::copy(_workingSet->getFlagged().begin(), _workingSet->getFlagged().end(),
+                      std::back_inserter(_flagged));
+            _flaggedIterator = _flagged.begin();
         }
 
         // We're streaming flagged results.
         invariant(!_doneReturningFlagged);
-        if (_flaggedIterator == _workingSet->getFlagged().end()) {
+        if (_flaggedIterator == _flagged.end()) {
             _doneReturningFlagged = true;
             return PlanStage::IS_EOF;
         }
